Added a4 additional note.

--- a/cs224n-natural-language-processing-with-deep-learning/2023/assignments/a4/additional-notes/001_evaluation_metric.ipynb
+++ b/cs224n-natural-language-processing-with-deep-learning/2023/assignments/a4/additional-notes/001_evaluation_metric.ipynb
@@ -28,7 +28,29 @@
     "]\n",
     "\n",
     "\n",
-    "def get_ngram(sentence, n):\n",
+    "def get_ngram(sentence, n=1):\n",
+    "    \"\"\"\n",
+    "    Get n-gram from a sentence\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    sentence : str\n",
+    "        Sentence to get n-gram from\n",
+    "    n : int\n",
+    "        n-gram size, default 1\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    list\n",
+    "        List of n-gram\n",
+    "\n",
+    "    Examples\n",
+    "    --------\n",
+    "    >>> get_ngram(\"this is a pen\", n=1)\n",
+    "    ['this', 'is', 'a', 'pen']\n",
+    "    >>> get_ngram(\"this is a pen\", n=2)\n",
+    "    ['this is', 'is a', 'a pen']\n",
+    "    \"\"\"\n",
     "    sentence = sentence.split()\n",
     "    return [\" \".join(sentence[i : i + n]) for i in range(len(sentence) - n + 1)]\n",
     "\n",
