--- a/cs224n-natural-language-processing-with-deep-learning/2023/assignments/a4/handout/q2.tex
+++ b/cs224n-natural-language-processing-with-deep-learning/2023/assignments/a4/handout/q2.tex
@@ -119,6 +119,8 @@
         \newline
         
         Which of the two NMT translations is considered the better translation according to the BLEU Score? Do you agree that it is the better translation?
+
+        \includegraphics[scale=0.22, page=1]{modified_ngram_precision.pdf}
         
         \ifans{ \\
             there is a need for adequate and predictable resources
