Finished a4 additional notes.

--- a/cs224n-natural-language-processing-with-deep-learning/2023/assignments/a4/additional-notes/002_load_data.ipynb
+++ b/cs224n-natural-language-processing-with-deep-learning/2023/assignments/a4/additional-notes/002_load_data.ipynb
@@ -20,7 +20,10 @@
     "#     tgt_sentences = [torch.tensor(sent) for sent in tgt_sentences]\n",
     "#     src_sentences = pad_sequence(src_sentences, batch_first=True)\n",
     "#     tgt_sentences = pad_sequence(tgt_sentences, batch_first=True)\n",
-    "#     return src_sentences, tgt_sentences"
+    "#     return src_sentences, tgt_sentences\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -69,7 +72,7 @@
     "train_loader = DataLoader(train_data, batch_size=batch_size, shuffle=shuffle, collate_fn=collate_fn)\n",
     "valid_loader = DataLoader(valid_data, batch_size=batch_size, shuffle=shuffle, collate_fn=collate_fn)\n",
     "\n",
-    "src_sentences, tgt_sentences = next(iter(train_loader))\n",
+    "src_sentences, tgt_sentences, _ = next(iter(train_loader))\n",
     "print(f\"src shape: {src_sentences.shape}, tgt shape: {tgt_sentences.shape}\")\n",
     "\n",
     "print(\"src and tgt sentences:\")\n",
