--- a/cs224n-natural-language-processing-with-deep-learning/2023/assignments/a4/additional-notes/003_define_model.ipynb
+++ b/cs224n-natural-language-processing-with-deep-learning/2023/assignments/a4/additional-notes/003_define_model.ipynb
@@ -6,13 +6,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
+    "from pathlib import Path\n",
     "from typing import Tuple, List\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch import Tensor\n",
+    "from torch import optim\n",
     "import torch.nn.functional as F\n",
-    "from torch.nn.utils.rnn import pad_packed_sequence, pack_padded_sequence"
+    "from torch.utils.data import DataLoader\n",
+    "from torch.nn.utils.rnn import pad_packed_sequence, pack_padded_sequence\n",
+    "\n",
+    "from utils import read_corpus, Vocab, collate_fn\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -167,6 +181,141 @@
     "nmt = NMT(encoder, decoder)\n",
     "scores = nmt(src, tgt, source_lengths)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "batch_size = 8\n",
+    "shuffle = True\n",
+    "\n",
+    "data_path = Path(\"../code\")\n",
+    "\n",
+    "train_data_src = read_corpus(data_path.joinpath(\"zh_en_data\", \"train_debug.zh\"), data_path / \"src.model\")\n",
+    "train_data_tgt = read_corpus(data_path.joinpath(\"zh_en_data\", \"train_debug.en\"), data_path / \"tgt.model\")\n",
+    "\n",
+    "valid_data_src = read_corpus(data_path.joinpath(\"zh_en_data\", \"dev.en\"), data_path / \"src.model\")\n",
+    "valid_data_tgt = read_corpus(data_path.joinpath(\"zh_en_data\", \"dev.zh\"), data_path / \"tgt.model\")\n",
+    "\n",
+    "vocab = Vocab.load(data_path / \"vocab.json\")\n",
+    "print(vocab)\n",
+    "\n",
+    "train_data_indices_src = vocab.src.words2indices(train_data_src)\n",
+    "train_data_indices_tgt = vocab.tgt.words2indices(train_data_tgt)\n",
+    "\n",
+    "valid_data_indices_src = vocab.src.words2indices(valid_data_src)\n",
+    "valid_data_indices_tgt = vocab.tgt.words2indices(valid_data_tgt)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "train_data = list(zip(train_data_indices_src, train_data_indices_tgt))\n",
+    "valid_data = list(zip(valid_data_indices_src, valid_data_indices_tgt))\n",
+    "\n",
+    "train_loader = DataLoader(train_data, batch_size=batch_size, shuffle=shuffle, collate_fn=collate_fn)\n",
+    "valid_loader = DataLoader(valid_data, batch_size=batch_size, shuffle=shuffle, collate_fn=collate_fn)\n",
+    "\n",
+    "src_sentences, tgt_sentences, _ = next(iter(train_loader))\n",
+    "print(f\"src shape: {src_sentences.shape}, tgt shape: {tgt_sentences.shape}\")\n",
+    "\n",
+    "print(\"src and tgt sentences:\")\n",
+    "for src_sent, tgt_sent in zip(src_sentences, tgt_sentences):\n",
+    "    src_sent = \"\".join(vocab.src.indices2words(src_sent.tolist()))\n",
+    "    tgt_sent = \"\".join(vocab.tgt.indices2words(tgt_sent.tolist()))\n",
+    "    print(\"-\" * 100)\n",
+    "    print(src_sent.replace(\"<pad>\", \"\").replace(\"▁\", \" \"))\n",
+    "    print(tgt_sent.replace(\"<pad>\", \"\").replace(\"▁\", \" \").replace(\"</s>\", \"\").replace(\"<s>\", \"\"))\n",
+    "    print(\"-\" * 100)\n",
+    "    print()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def train_epoch(dataloader, model, optimizer):\n",
+    "    total_loss = 0\n",
+    "    for data in dataloader:\n",
+    "        input_tensor, target_tensor, input_lengths = data\n",
+    "        optimizer.zero_grad()\n",
+    "        loss = -model(input_tensor, target_tensor, input_lengths).sum()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        total_loss += loss.item()\n",
+    "    return total_loss / len(dataloader)\n",
+    "\n",
+    "\n",
+    "def train(train_dataloader, model, n_epochs, learning_rate=0.001):\n",
+    "    num_digits = int(math.log10(n_epochs)) + 1\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "    moving_loss = None\n",
+    "    losses = defaultdict(list)\n",
+    "    for epoch in range(1, n_epochs + 1):\n",
+    "        loss = train_epoch(train_dataloader, model, optimizer)\n",
+    "        if moving_loss is None:\n",
+    "            moving_loss = loss\n",
+    "        else:\n",
+    "            moving_loss = 0.95 * moving_loss + 0.05 * loss\n",
+    "        losses[\"loss\"].append(loss)\n",
+    "        losses[\"moving_loss\"].append(moving_loss)\n",
+    "        print(f\"Epoch {epoch+1:0{num_digits}d}/{n_epochs} Loss: {moving_loss:.4f}\")\n",
+    "    return losses"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "input_size = len(vocab.src)\n",
+    "target_size = len(vocab.tgt)\n",
+    "hidden_size = 128\n",
+    "batch_size = 32\n",
+    "\n",
+    "encoder = Encoder(input_size, hidden_size=hidden_size).to(device)\n",
+    "decoder = Decoder(target_size, hidden_size=hidden_size).to(device)\n",
+    "nmt = NMT(encoder, decoder).to(device)\n",
+    "\n",
+    "train_loader = DataLoader(train_data, batch_size=batch_size, shuffle=shuffle, collate_fn=collate_fn)\n",
+    "valid_loader = DataLoader(valid_data, batch_size=batch_size, shuffle=shuffle, collate_fn=collate_fn)\n",
+    "\n",
+    "losses = train(train_loader, nmt, 200)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "_, axs = plt.subplots(nrows=len(losses.keys()), figsize=(10, 10), sharex=True)\n",
+    "\n",
+    "for ax, (k, v) in zip(axs, losses.items()):\n",
+    "    ax.plot(v)\n",
+    "    ax.set_title(k)\n",
+    "    ax.grid()\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
